--- a/libraries/rt/CMakeLists.txt
+++ b/libraries/rt/CMakeLists.txt
@@ -2,6 +2,9 @@
 set(C_DEFINES, "-D__wasm__ -DQUAD_PRECISION")
 set( CMAKE_C_FLAGS " -Wall ${CMAKE_C_FLAGS} ${C_DEFINES} -allow-sse" )
 set( CMAKE_CXX_FLAGS " -Wall ${CMAKE_CXX_FLAGS} ${C_DEFINES} -allow-sse" )
+
+message("rt xxxx CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} ")
+message("rt xxxx CMAKE_C_FLAGS ${CMAKE_C_FLAGS} ")
 set ( builtins_sources
    compiler_builtins.cpp
    fixtfti.c
@@ -28,3 +31,5 @@ target_include_directories( native_rt PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}"
 
 add_custom_command( TARGET rt POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_FILE:rt> ${BASE_BINARY_DIR}/lib )
 add_custom_command( TARGET native_rt POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_FILE:native_rt> ${BASE_BINARY_DIR}/lib )
+message("rt xxxx nnnnnnn  CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} ")
+message("rt xxxx nnnnnnn  CMAKE_C_FLAGS ${CMAKE_C_FLAGS} ")
