--- a/libraries/native/CMakeLists.txt
+++ b/libraries/native/CMakeLists.txt
@@ -9,6 +9,8 @@ endif()
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wno-everything -allow-sse")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-everything -allow-sse")
 
+message("softfloat CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS}")
+
 file(GLOB HEADERS "*.hpp"
                   "*.h")
 
